# qa_guru_python_mobile_tests_19

./: .gitignore  pyproject.toml  pytest.ini  requirements.txt
mobile_tests/tests/: conftest.py  test_browserstack.py  test_wiki.py
